--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>Guess My Number!</title>
-    <link rel="stylesheet" href="">
+    <link rel="web icon" href="7.jpg" type=".jpg">
   </head>
   <body>
     <header>
